...
            <objects>
                <tableViewController id="MOh-CZ-3ki" customClass="RepositorySearchMainView" customModule="iOSEngineerCodeCheck" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Fpt-Ev-QNW">
                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="GitHubのリポジトリを検索できるよー" id="6rq-CD-Hob">
                            <rect key="frame" x="0.0" y="0.0" width="428" height="44"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            <textInputTraits key="textInputTraits"/>
                        </searchBar>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Repository" textLabel="V66-xN-aKy" detailTextLabel="E7E-kF-FF6" style="IBUITableViewCellStyleSubtitle" id="jZX-YR-etd">
...
                    <navigationItem key="navigationItem" id="J6o-vL-S1z">
                        <barButtonItem key="rightBarButtonItem" id="5iX-io-Y6k">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="b2G-S7-wZn">
                                <rect key="frame" x="313" y="4.6666666666666679" width="95" height="35"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Share"/>
                                <connections>
                                    <action selector="shareRepositoryButton:" destination="AHY-RL-7mG" eventType="touchUpInside" id="ogn-bC-YcJ"/>
                                </connections>
                            </button>
                        </barButtonItem>
                    </navigationItem>
...
